--- a/templates/blog/post.html.twig
+++ b/templates/blog/post.html.twig
@@ -10,4 +10,6 @@
         <p>{{ post.text }}</p>
         <p>{{ post.date|date('H:i:s') }}</p>
         <p>{{ post.price|price }}</p>
+        <p>Here is the current locale {{ locale }}.</p>
+        <p>{{ message }}</p>
 {% endblock %}
