Create notification badge

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,14 @@
     <div class="order-2 order-md-1">
         <ul class="navbar-nav px-3">
             {% if is_granted('ROLE_USER') %}
+                <li class="nav-item text-nowrap border-right border-secondary">
+                    <a href="" class="nav-link">
+                        Notifications
+                        <span class="badge badge-light" id="notification-count">
+                            <i class="fas fa-spin fa-circle-notch"></i>
+                        </span>
+                    </a>
+                </li>
                 <li class="nav-item text-nowrap">
                     <a class="nav-link"
                        href="#">{{ app.user.fullName }}</a>
@@ -53,6 +61,27 @@
 </main>
 {% block javascripts %}
     {{ encore_entry_script_tags('app') }}
+    <script src="https://kit.fontawesome.com/ce8a315652.js" crossorigin="anonymous"></script>
+
+    {% if is_granted('ROLE_USER') %}
+    <script>
+        function fetchNotificationCount() {
+            fetch(
+                '{{ path('notification_unread') }}',
+                {'credentials': 'include'}
+            ).then(function (response) {
+                response.json().then(function (json) {
+                    document.getElementById('notification-count').innerText = json.count;
+                    setTimeout(fetchNotificationCount, 5000);
+                });
+            }).catch(function (reason) {
+                
+            });
+        }
+        fetchNotificationCount();
+    </script>
+    {% endif %}
+
 {% endblock %}
 </body>
 </html>
